--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ plyfile==0.9
 scikit-image==0.19.3
 scikit-learn==1.0.2
 scipy==1.7.3
-torch==1.12.1+cu113
+torch==2.1.0
 torchmetrics==0.11.4
-torchvision==0.13.1+cu113
+torchvision==0.16.0
 tqdm==4.66.1
